--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,7 @@ loom {
 	}
 	dependencies {
 		modImplementation "dev.isxander:yet-another-config-lib:${project.yacl_version}"
-		modImplementation("com.terraformersmc:modmenu:${project.modmenu_version}")
+		modImplementation "com.terraformersmc:modmenu:${project.modmenu_version}"
 	}
 }
 
@@ -44,7 +44,7 @@ dependencies {
 
 	// Fabric API. This is technically optional, but you probably want it anyway.
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
-	
+
 }
 
 processResources {
